2004-03-31  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebConfigurationSettings.cs: fixes bug 56267.

2004-03-30  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebConfigurationSettings.cs: use FileSystemWatcher and really reload
	configuration when the file is created or modified.

2004-02-24  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebConfigurationSettings.cs: we were loading web.config from / always!
	Thanks to Lluis for noticing this.

2004-02-09  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebConfigurationSettings.cs: fix Web.config search for case
	insensitive filesystems.

2004-02-04  Lluis Sanchez Gual <lluis@ximian.com>

	* WebConfigurationSettings.cs: Load remoting configuration when reading
	  the web.config file.

2004-01-23  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AuthConfig.cs:
	* AuthenticationConfigHandler.cs: added RequireSSL and
	SlidingExpiration.

	* HandlerFactoryProxy.cs: not public.
	* HandlerItem.cs: not public.

2004-01-20  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebConfigurationSettings.cs: fix location path lookup. Closes bug
	#53072.

2004-01-12  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* System.Web.Configuration/GlobalizationConfiguration.cs: undo old fix.

	* System.Web.Configuration/PagesConfiguration.cs:
	* System.Web.Configuration/PagesConfigurationHandler.cs: new files for
	processing system.web/pages section.

2004-01-10  Jackson Harper <jackson@ximian.com>

	* TraceConfig.cs: New class contains trace configuration data.
	* TraceConfigurationHandler.cs: New class parses trace
	configurations.
	
2004-01-05  Jackson Harper <jackson@ximian.com>

	* HandlerItem.cs: Fix typo so slashes are stripped from paths properly.
	
2003-12-17  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* CustomErrorsConfigHandler.cs: handle <system.web><customErrors />..

2003-12-16  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpCapabilitiesBase.cs: use the new loader.
