@@ -1,3 +1,10 @@
+2004-04-04  Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* WebConfigurationSettings.cs: "/" is the virtual root directory of
+	the application. This fixes a bug reported by Vlad that caused
+	configuration error because files were read twice when there's an
+	application different from "/" defined.
+
 2004-03-31  Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
 	* WebConfigurationSettings.cs: fixes bug 56267.
